masthead on home is always sticky (fixed) on tablet+
SRFCMSAL-2252

--- a/source/_patterns/20-molecules/sticky-container/sticky-container.scss
+++ b/source/_patterns/20-molecules/sticky-container/sticky-container.scss
@@ -19,14 +19,11 @@
   }
 }
 
-.sticky-container--home.sticky-container--longportalnames.affix {
-  @include tablet {
-    margin-top: -56px;
+// masthead on home is always sticky (fixed) on tablet+
+.sticky-container--home {
+  @include tablet-up {
+    display: fixed;
   }
-}
-
-.affix-top {
-  margin-top: 0;
 }
 
 .affix-placeholder {
